20-12-05    Added missing path vars in config template (Tomasz Osmialowski)
20-12-05    Fixed corruption of german language file in default module
19-12-05    Fixed incorrect constant which prevented instant messages from working
            correctly
16-12-05    Changed erroneous ECT tz to CET (Sylvain PAPET)

IMPROVEMENTS
16-01-06    Instantiating a cache object has changed from
            $cache = & SGL::cacheSingleton(); to $cache = & SGL_Cache::singleton();
            Likewise, SGL::clearCache() has changed to SGL_Cache::clear()
10-01-06    Implemented a Savant2 template renderer (Andrey Podshivalov)
09-01-06    Url alias solution fully integrated and database-driven
06-01-06    Added generateRadioList method to SGL_Output (mawan)
06-01-06    Added a wrapper to create html views easily:
                $view = new SGL_HtmlSimpleView($output);
                $html = $view->render();
            (Andrey Podshivalov)
06-01-06    Implemented post-connect query which is used to set the default
            character set for the current connection (MySQL 4.1 or higher). For
            example: SET NAMES utf8
06-01-06    All data object calls are now config driven (freeslacker)
05-01-06    Added a new admin GUI, admin tasks will be clearly defined and
            identified by this addition (Julien Casanova)
04-01-06    Blocks can now be enabled/disabled for sub-sections (mstahv)
04-01-06    Cleanup of Translation2 implementation, navigation section and items
            get their own translation id, no more sharing with titles.  section
            and item_addition both get a new trans_id field (AJ Tarachanowicz)
23-12-05    Added new navigation block (AJ Tarachanowicz)
22-12-05    PEAR's Translation2 lib integrated which means application interface,
            navigation and content can now be translated into multiple languages,
            many thanks to AJ's gargantuan effort here and the patronage of
            Multithink.com (AJ Tarachanowicz)