@@ -13,6 +13,7 @@ BUGFIXES
 16-12-05    Changed erroneous ECT tz to CET (Sylvain PAPET)
 
 IMPROVEMENTS
+17-01-06    Added new 'getAllModules' xml-rpc service
 16-01-06    Instantiating a cache object has changed from
             $cache = & SGL::cacheSingleton(); to $cache = & SGL_Cache::singleton();
             Likewise, SGL::clearCache() has changed to SGL_Cache::clear()
